--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <link rel="stylesheet" href="css/responsive.css">
 
     <!-- Favicon -->
-    <link rel="shortcut icon" href="image/icons/fav-icon.png" type="image/x-icon">
+    <link rel="shortcut icon" href="Image/icons/fav-icon.png" type="image/x-icon">
 
     <!-- Font Awesome Cdn Link -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
