--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
                       <img class=" img-fluid" src="Image/PngItem_2597366 1.png" class="card-img-top" alt="...">
                       <div class="card-body">
                         <h5 class="card-title">Ladies Jacket</h5>
-                        <p class="card-text">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nisi voluptates sapiente harum quaerat vel nam?</p>
+                        <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Magni nemo sint molestiae, omnis numquam consequuntur!</p>
                         <div class="d-flex justify-content-between align-items-center">
                             <h3 class="heading-highlight">$200</h3>
                             <button class="btn"><i class="fa fa-shopping-cart"></i> Buy Now</button>
@@ -209,7 +209,7 @@
                       <img class="img-fluid" src="Image/vippng 1.png" class="card-img-top" alt="...">
                       <div class="card-body">
                         <h5 class="card-title">Men Leather Jacket</h5>
-                        <p class="card-text">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nisi voluptates sapiente harum quaerat vel nam?</p>
+                        <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Magni nemo sint molestiae, omnis numquam consequuntur!</p>
                         <div class="d-flex justify-content-between align-items-center">
                             <h3 class="heading-highlight">$200</h3>
                             <button class="btn"><i class="fa fa-shopping-cart"></i> Buy Now</button>
