--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
   <!-- Main part start from here -->
   <main>
    <!--Banner section start-->
-   <section class="banner-section ms-4">
+   <section class="banner-section ps-4">
     <div class="container">
        <div class="row d-flex justify-content-center align-items-center">
             <article class="col-md-6 width ">             
@@ -75,7 +75,7 @@
 
       
     <!-- Carousel section start here -->
-    <section class="carousel pt-5 ms-5">
+    <section class="carousel pt-5 ps-3">
         <div class="container">
             <div class="row">
              <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
@@ -131,7 +131,7 @@
      </section>
 
     <!-- Woman Jacket Section -->
-    <section class="woman-section pt-5 ms-4">
+    <section class="woman-section pt-5 ps-4">
         <div class="container">
             <div class="row">
                 <h3>Woman Jacket</h3>
@@ -184,7 +184,7 @@
     </section>
 
     <!-- Men Jacket Section -->
-    <section class="woman-section pt-5 ms-4">
+    <section class="woman-section pt-5 ps-4">
         <div class="container">
             <div class="row">
                 <h3>Man Jacket</h3>
@@ -237,7 +237,7 @@
     </section>
 
     <!-- contact and customize section  -->
-    <section class=" customize-section pt-5 ms-3">
+    <section class=" customize-section pt-5 ps-3">
         <div class="container">
             <div class="row">
                 <article class="col-md-5 d-flex flex-column ">
