--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
 
       
     <!-- Carousel section start here -->
-    <section class="carousel pt-5 ps-3">
+    <section class="carousel pt-3 ps-3">
         <div class="container">
             <div class="row">
              <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
@@ -88,7 +88,7 @@
                             <button class="btn btn-padding"><i class="fa fa-shopping-cart"></i> Buy Now</button>
                          </div>
                          <div class="col-md-5">
-                             <img class="w-75 img-fluid" src="Image/img3.jpg" class="d-block w-100" alt="...">
+                             <img class="w-75 img-fluid pt-5" src="Image/img3.jpg" class="d-block w-100" alt="...">
                          </div>
                      </div>
                    </div>
@@ -100,7 +100,7 @@
                             <button class="btn btn-padding"><i class="fa fa-shopping-cart"></i> Buy Now</button>
                          </div>
                          <div class="col-md-5">
-                             <img class="w-75 img-fluid" src="Image/img4.jpg" class="d-block w-100" alt="...">
+                             <img class="w-75 img-fluid pt-5" src="Image/img4.jpg" class="d-block w-100" alt="...">
                          </div>
                      </div>
                    </div>
@@ -112,7 +112,7 @@
                             <button class="btn btn-padding"><i class="fa fa-shopping-cart"></i> Buy Now</button>
                          </div>
                          <div class="col-md-5">
-                             <img class="w-75 img-fluid" src="Image/img2.jpg" class="d-block w-100" alt="...">
+                             <img class="w-75 img-fluid pt-5" src="Image/img2.jpg" class="d-block w-100" alt="...">
                          </div>
                      </div>
                    </div>
@@ -283,7 +283,7 @@
 
                 <article class="col-md-7">
                     <div class="row">
-                        <img class="banner d-block w-100" src="Image/icons/banner.png" alt="">
+                        <img class="banner pt-5 d-block w-100" src="Image/icons/banner.png" alt="">
                     </div>
                 </article>
             </div>
