--- a/index.html
+++ b/index.html
@@ -84,8 +84,8 @@
                      <div class="row">
                          <div class="col-md-7">
                             <h1>Black Phillies Jacket for Men</h1>
-                            <p>The attractive and fashionable Denim jacket made from cotton which is very comfortable to wear for different social and cultural functions</p>
-                            <button class="btn btn-padding"><i class="fa fa-shopping-cart"></i> Buy Now</button>
+                            <p>The attractive and fashionable Denim jacket made from cotton which is very comfortable to wear for different social and cultural functions.Our eCommerce solutions offer the best in standard features and functionality.</p>
+                            <button class="btn btn-padding mt-3"><i class="fa fa-shopping-cart"></i> Buy Now</button>
                          </div>
                          <div class="col-md-5">
                              <img class="w-75 img-fluid pt-5" src="Image/img3.jpg" class="d-block w-100" alt="...">
@@ -97,7 +97,7 @@
                          <div class="col-md-7">
                             <h1>Black Phillies Jacket for Men</h1>
                             <p>The attractive and fashionable Denim jacket made from cotton which is very comfortable to wear for different social and cultural functions</p>
-                            <button class="btn btn-padding"><i class="fa fa-shopping-cart"></i> Buy Now</button>
+                            <button class="btn btn-padding mt-3"><i class="fa fa-shopping-cart"></i> Buy Now</button>
                          </div>
                          <div class="col-md-5">
                              <img class="w-75 img-fluid pt-5" src="Image/img4.jpg" class="d-block w-100" alt="...">
@@ -109,7 +109,7 @@
                          <div class="col-md-7">
                             <h1>Black Phillies Jacket for Men</h1>
                             <p>The attractive and fashionable Denim jacket made from cotton which is very comfortable to wear for different social and cultural functions</p>
-                            <button class="btn btn-padding"><i class="fa fa-shopping-cart"></i> Buy Now</button>
+                            <button class="btn btn-padding mt-3"><i class="fa fa-shopping-cart"></i> Buy Now</button>
                          </div>
                          <div class="col-md-5">
                              <img class="w-75 img-fluid pt-5" src="Image/img2.jpg" class="d-block w-100" alt="...">
