--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
                      <div class="row">
                          <div class="col-md-7">
                             <h1>Black Phillies Jacket for Men</h1>
-                            <p>The attractive and fashionable Denim jacket made from cotton which is very comfortable to wear for different social and cultural functions</p>
+                            <p>The attractive and fashionable Denim jacket made from cotton which is very comfortable to wear for different social and cultural functions.Our eCommerce solutions offer the best in standard features and functionality.</p>
                             <button class="btn btn-padding mt-3"><i class="fa fa-shopping-cart"></i> Buy Now</button>
                          </div>
                          <div class="col-md-5">
@@ -108,7 +108,7 @@
                      <div class="row">
                          <div class="col-md-7">
                             <h1>Black Phillies Jacket for Men</h1>
-                            <p>The attractive and fashionable Denim jacket made from cotton which is very comfortable to wear for different social and cultural functions</p>
+                            <p>The attractive and fashionable Denim jacket made from cotton which is very comfortable to wear for different social and cultural functions.Our eCommerce solutions offer the best in standard features and functionality.</p>
                             <button class="btn btn-padding mt-3"><i class="fa fa-shopping-cart"></i> Buy Now</button>
                          </div>
                          <div class="col-md-5">
